@@ -3,6 +3,7 @@ package ru.practicum.shareit.item;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
+import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemCreateDto;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemUpdateDto;
@@ -29,16 +30,34 @@ public class ItemController {
         return ItemMapper.toItemDto(itemService.create(ItemMapper.toItem(item), userId));
     }
 
+    @PostMapping("/{itemId}/comment")
+    public CommentDto addComment(
+            @PathVariable Long itemId,
+            @RequestHeader("X-Sharer-User-Id") Long userId,
+            @Valid @RequestBody CommentDto commentDto) {
+        return itemService.addComment(itemId, userId, commentDto);
+    }
+
     @GetMapping("/{itemId}")
-    public ItemDto findById(@PathVariable Long itemId) {
-        return ItemMapper.toItemDto(itemService.findById(itemId));
+    public ItemDto findById(@PathVariable Long itemId, @RequestHeader("X-Sharer-User-Id") Long userId) {
+        ItemDto itemDto = ItemMapper.toItemDto(itemService.findById(itemId));
+        itemDto.setComments(itemService.getItemComments(itemId));
+        itemDto.setLastBooking(itemService.getLastBooking(itemId, userId));
+        itemDto.setNextBooking(itemService.getNextBooking(itemId, userId));
+        return itemDto;
     }
 
     @GetMapping
     public List<ItemDto> findAllByUser(@RequestHeader("X-Sharer-User-Id") Long userId) {
         return itemService.findAllByUser(userId).stream()
-                .map(ItemMapper::toItemDto)
-                .toList();
+                .map(item -> {
+                    ItemDto itemDto = ItemMapper.toItemDto(item);
+                    itemDto.setComments(itemService.getItemComments(item.getId()));
+                    itemDto.setLastBooking(itemService.getLastBooking(item.getId(), userId));
+                    itemDto.setNextBooking(itemService.getNextBooking(item.getId(), userId));
+                    return itemDto;
+                })
+                .collect(Collectors.toList());
     }
 
     @PatchMapping("/{itemId}")
